[package]
name = "twittersentiment"
version = "0.1.0"
authors = ["Danielle Douglas <ddouglas87@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
twitter-stream = "0.9"
rustc-serialize = "0.3"
chrono = "0.4"
sentiment = "0.1"
plotlib = "0.4"
#im = { version = "13.0", features = ["proptest", "serde"] }
